// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`importMapReplace > should apply custom mappings 1`] = `
"
  /** importMapReplace */
  import CustomPackage from "http://localhost:3000/*custom-package?bundle";"
`;

exports[`importMapReplace > should handle dynamic imports with template literals 1`] = `
"
  /** importMapReplace */
  const dynamic = 'dd'; const React = import(\`\${dynamic}dom\`);"
`;

exports[`importMapReplace > should handle import statements with both default and named imports 1`] = `
"
  /** importMapReplace */
  import React, { useState, useEffect } from "http://localhost:3000/reactMod.mjs";"
`;

exports[`importMapReplace > should handle import statements with default imports and aliases 1`] = `
"
  /** importMapReplace */
  import ReactDOM from "http://localhost:3000/reactDomClient.mjs";"
`;

exports[`importMapReplace > should handle import statements with multiple named imports 1`] = `
"
  /** importMapReplace */
  import { useState, useEffect, useCallback } from "http://localhost:3000/reactMod.mjs";"
`;

exports[`importMapReplace > should handle import statements with namespace imports 1`] = `
"
  /** importMapReplace */
  import * as React from "http://localhost:3000/reactMod.mjs";"
`;

exports[`importMapReplace > should handle imports starting with @/ 1`] = `
"
  /** importMapReplace */
  
      import MyComponent from "http://localhost:3000/@/components/MyComponent.mjs";
      import MyUtil from "http://localhost:3000/@/utils/MyUtil.mjs";
    "
`;

exports[`importMapReplace > should handle imports with file extensions 1`] = `
"
  /** importMapReplace */
  
      import MyModule from "./myModule.js";
      import MyTypeScriptModule from "./myModule.ts";
      import MyJSXModule from "./myModule.jsx";
      import MyTSXModule from "./myModule.tsx";
    "
`;

exports[`importMapReplace > should handle imports with query parameters 1`] = `
"
  /** importMapReplace */
  
      import MyModule from "http://localhost:3000/*my-module?param1=value1&param2=value2?bundle";
    "
`;

exports[`importMapReplace > should handle multiple import statements 1`] = `
"/** importMapReplace */
import React from "http://localhost:3000/reactMod.mjs";
      import { useState } from "http://localhost:3000/reactMod.mjs";
      import axios from "http://localhost:3000/axios?bundle";"
`;

exports[`importMapReplace > should handle multiple imports from different modules 1`] = `
"
  /** importMapReplace */
  
    import { css } from "http://localhost:3000/emotion.mjs";
    import $ from "http://localhost:3000/reactMod.mjs";

    import { css  as $kdkd } from "http://localhost:3000/emotion.mjs";

    import { useEffect, useState, useRef } from "http://localhost:3000/reactMod.mjs";
    import type { FC } from "http://localhost:3000/reactMod.mjs";
    import QRTerminal from "http://localhost:3000/*qrcode-terminal?bundle";
    "
`;

exports[`importMapReplace > should handle relative imports 1`] = `
"
  /** importMapReplace */
  import React from "http://localhost:3000/live/box/index.js";"
`;

exports[`importMapReplace > should handle specific exports from tslib 1`] = `
"
  /** importMapReplace */
  import { __await, __rest } from "http://localhost:3000/*tslib?bundle=true&exports=__await,__rest";"
`;

exports[`importMapReplace > should handle specific named exports 1`] = `
"
  /** importMapReplace */
  import { prop, prop2 } from "http://localhost:3000/*foo?bundle=true&exports=prop,prop2";"
`;

exports[`importMapReplace > should handle specific named imports with aliases 1`] = `
"
  /** importMapReplace */
  import { __await as aw, __rest  as restNow} from "http://localhost:3000/*tslib?bundle=true&exports=__await,__rest";"
`;

exports[`importMapReplace > should ignore absolute URLs 1`] = `
"
  /** importMapReplace */
  import MyComponent from "http://example.com/MyComponent.js";"
`;

exports[`importMapReplace > should ignore relative URLs 1`] = `
"
  /** importMapReplace */
  import MyComponent from "http://localhost:3000/live/MyComponent/index.js";"
`;

exports[`importMapReplace > should not modify non-import statements 1`] = `
"
  /** importMapReplace */
   eturn e[t] === r ||
              (e[t] = r,
                (t === "prop" || t === "value" || t === "name" ||
                  t === "params" || t === "important" || t === "text") &&
                e.markDirty()),
              !0;"
`;

exports[`importMapReplace > should process JSX-related imports 1`] = `
"
  /** importMapReplace */
  eturn d.className=f,a&&(d.ref=a),O.createElement(O.Fragment,null,O.createElement(On,{cache:t,serialized:m,isStringTag:typeof c=="string"}),O.createElement(c,d))}),dr=Rn;import"http://localhost:3000/reactMod.mjs";var va=Y(Yr());var xa=Z.Fragment;function Sa(e,t,a){return me.call(t,"css")?Z.jsx(dr,pr(e,t),a):Z.jsx(e,t,a)}function Ea(e,t,a){return me.call(t,"css")?Z.jsxs(dr,pr(e,t),a):Z.jsxs(e,t,a)}";"
`;

exports[`importMapReplace > should replace dynamic imports 1`] = `
"
  /** importMapReplace */
  const React = import("http://localhost:3000/reactMod.mjs");"
`;

exports[`importMapReplace > should replace dynamic imports at the end of the file 1`] = `
"
  /** importMapReplace */
  
    import{Buffer as De}from"http://localhost:3000/v125/buffer@6.0.3/es2024/buffer.bundle.mjs"
    let { Mp3Encoder: t } = await import("http://localhost:3000/*lamejs?bundle");
    import{timeDay as _,timeSunday as bt,timeMonday as b,timeThursday as w,timeYear as S,utcDay as $,utcSunday as Vt,utcMonday as V,utcThursday as p,utcYear as F}from"http://localhost:3000/*d3-time?bundle=true&exports=timeDay,timeSunday,timeMonday,timeThursday,timeYear,utcDay,utcSunday,utcMonday,utcThursday,utcYear";
      async function loadModule() {
        let{default:c}=await import("http://localhost:3000/*axios?bundle");
        let{default:d}=await import("https://unpkg.com/axios/dist/axios.min.js");
        
        const module = await import("http://localhost:3000/*some-module?bundle");
        // do something with module
      }
        import"http://localhost:3000/jsx.mjs";
        import"http://localhost:3000/reactMod.mjs";
        async function y(s){await s(m)}
        export{n as Particles,n as default,y as initParticlesEngine};
    "
`;

exports[`importMapReplace > should replace dynamic imports inside an async function 1`] = `
"
  /** importMapReplace */
  
    import{Buffer as De}from"http://localhost:3000/v125/buffer@6.0.3/es2024/buffer.bundle.mjs"
    let { Mp3Encoder: t } = await import("http://localhost:3000/*lamejs?bundle");
    import{timeDay as _,timeSunday as bt,timeMonday as b,timeThursday as w,timeYear as S,utcDay as $,utcSunday as Vt,utcMonday as V,utcThursday as p,utcYear as F}from"http://localhost:3000/*d3-time?bundle=true&exports=timeDay,timeSunday,timeMonday,timeThursday,timeYear,utcDay,utcSunday,utcMonday,utcThursday,utcYear";
      async function loadModule() {
        let{default:c}=await import("http://localhost:3000/*axios?bundle");
        let{default:d}=await import("https://unpkg.com/axios/dist/axios.min.js");
        
        const module = await import("http://localhost:3000/*some-module?bundle");
        // do something with module
      }
    "
`;

exports[`importMapReplace > should replace dynamic imports with await 1`] = `
"
  /** importMapReplace */
  const module = await import("http://localhost:3000/*some-module?bundle");"
`;

exports[`importMapReplace > should replace imports from react-spring 1`] = `
"
  /** importMapReplace */
  
    import { useSpring, animated } from "http://localhost:3000/*react-spring?bundle=true&exports=useSpring,animated"; // Importing react-spring
    "
`;

exports[`importMapReplace > should replace shadcn-ui dynamic imports 1`] = `
"
  /** importMapReplace */
  import React from "http://localhost:3000/@/components/ui/alert.mjs";"
`;

exports[`importMapReplace > should replace shadcn-ui imports 1`] = `
"
  /** importMapReplace */
  
    import { css } from "http://localhost:3000/emotion.mjs";
    import $ from "http://localhost:3000/reactMod.mjs";
    import { Button } from "http://localhost:3000/@/components/ui/button.mjs";

    import { css  as $kdkd } from "http://localhost:3000/emotion.mjs";

    import { useEffect, useState, useRef } from "http://localhost:3000/reactMod.mjs";
    import type { FC } from "http://localhost:3000/reactMod.mjs";
    import QRTerminal from "http://localhost:3000/*qrcode-terminal?bundle";
    "
`;

exports[`importMapReplace > should replace the live URLs 1`] = `
"
  /** importMapReplace */
  import Box from "http://localhost:3000/live/Box";"
`;

exports[`importMapReplace > should replace top-level default exports 1`] = `
"
  /** importMapReplace */
  export { default } from "http://localhost:3000/reactMod.mjs";"
`;

exports[`importMapReplace > should replace top-level exports, except the ones in importmap 1`] = `
"
  /** importMapReplace */
  import { useState } from "http://localhost:3000/reactMod.mjs";"
`;

exports[`importMapReplace > should replace top-level imports 1`] = `
"
  /** importMapReplace */
  import React from "http://localhost:3000/reactMod.mjs";"
`;

exports[`importMapReplace > should replace top-level imports with dot in the module name 1`] = `
"
  /** importMapReplace */
  import React from "http://localhost:3000/*react.gl?bundle";"
`;
